--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
-<footer>
-  <div class="container">
-    <p>footer text</p>
+<footer class="red lighten-1">
+  <div class="container page-footer center-align">
+    <p class="white-text">fazbook-auth</p>
   </div>
 </footer>
