--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
-<header>
-  <div class="container">
-    <h1>Welcome to Fazbook-auth</h1>
+<header class="red lighten-1">
+  <div class="container row">
+    <h1 class="col s12 center-align white-text">Welcome to Fazbook-Auth</h1>
   </div>
 </header>
