--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,17 @@
-header {
+body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+main {
+  flex: 1 0 auto;
+}
+
+/*header {
   background-color: teal;
   color: white;
-}
+}*/
 
 header .container h1 {
   font-size: 36px;
@@ -11,11 +21,16 @@ main{
   flex: 1 0 auto;
 }
 
-footer {
+.label {
+  font-size: 20px;
+  text-align: left;
+}
+
+/*footer {
   background-color: teal;
   color: white;
 }
-
-a {
+*/
+/*a {
   color: #00B7FF;
-}
+}*/
